# wl-monitor

./: Cargo.toml  Dioxus.toml  README.md  manifest.json
.github/workflows/: deploy.yml
assets/: base.css  tailwind.css  welcome-screen.css
assets/plist-ios/: Info.plist
src/: main.rs  manifest_json.rs
src/components/: mod.rs
src/components/icons/: android_install.rs  clock.rs  close.rs  mod.rs  spinner.rs
src/components/icons/browsers/: mod.rs  style.css
src/components/icons/safari/: mod.rs  style.css
src/components/icons/train/: mod.rs  style.css
src/components/input/: component.rs  style.css
src/components/line_badges/: bus.rs  mod.rs  nightline.rs  railway.rs  tram.rs  underground.rs
src/components/monitor/: mod.rs  style.css
src/components/search_area/: mod.rs  search_input.rs  select_field.rs  style.css
src/data/: dataset.rs  helpers.rs  mod.rs
src/pwa/: manifest.rs  manifest_json.rs  mod.rs  service_worker.rs
src/pwa/android/: mod.rs
src/pwa/ios/: mod.rs  splash_screen.rs
src/pwa/welcome_screen/: mod.rs  screens.rs  style.css
src/welcome_screen/: mod.rs  style.css
