[package]
name = "wl-monitor"
version = "0.1.0"
authors = ["flopetautschnig (floscodes) <mail@floscodes.net>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
dioxus = { version = "0.7.2", features = ["document", "html"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
gloo-storage = "0.3.0"
log = "0.4.29"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
serde = "1.0.228"
serde_json = "1.0.145"
time = "0.3.44"
tokio = { version = "1.48.0", optional = true }
urlencoding = "2.1.3"
wasmtimer = { version = "0.4.3", optional = true }

[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web", "wasmtimer"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile", "tokio"]
